# Argv

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: test.yaml
example/: CMakeLists.txt  Main.cpp  MyClass.hpp
include/Argv/: Argv.hpp
include/argv/: Argv.hpp
src/: main.cpp
test/: CMakeLists.txt  Test.cpp
